--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@wagmi/cli": "latest",
     "bufferutil": "^4.0.8",
     "encoding": "^0.1.13",
+    "firebase": "^12.3.0",
     "lokijs": "^1.5.12",
     "pino-pretty": "^10.3.1",
     "supports-color": "^9.4.0",
